# haskellPlayground

learn.hsproj/: .uuid  Learn.hs  Transformations.hs  _Learn.hsplay  learn.cabal
