name: learn
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.2.1
Executable learn
  main-is: Learn.hs
  buildable: True
  build-depends:
      base -any,
      JuicyPixels -any,
      random -any,
      Rasterific -any
  other-modules:
      Transformations
